--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             border-top-right-radius: 50% 50%;
             border-bottom-right-radius: 50% 50%;
             border-bottom-left-radius: 50% 50%;
-            width: 113px;
+            width: 115px;
             height: 115px;
             filter: hue-rotate(180deg);
          }
@@ -64,28 +64,23 @@
                <h2 class="lighter">Objetivo do <strong>Code Review</strong></h2>
             </section>
             <section data-background="#0562dc">
-               <h2 class="lighter">Como fazer <strong>Code Review</strong></h2>
-            </section>
-            <section data-background="#0562dc">
                <h2 class="lighter">Código bom é questão de <strong>ponto de vista</strong></h2>
             </section>
             <section class="sec-slide top text-left">
                <h3 class="text-center">Vantagens</h3>
                <ul class="list-left">
-                  <li class="fragment">1;</li>
-                  <li class="fragment">2;</strong></li>
-                  <li class="fragment">3;</strong></li>
-                  <li class="fragment">4.</strong></li>
+                  <li class="fragment">Compartilhamento de conhecimento;</li>
+                  <li class="fragment">Desenvolvimento de espirito de Time;</strong></li>
+                  <li class="fragment">Aumento de qualidade código;</strong></li>
+                  <li class="fragment">Aumento de qualidade de produto.</strong></li>
+                  <li class="fragment">Possibilita prevenção de problemas em Produção.</strong></li>
                </ul>
             </section>
             <section class="sec-slide top text-left">
                <h3 class="text-center">Desvantagens</h3>
-               <ul class="list-left">
-                  <li class="fragment">1;</li>
-                  <li class="fragment">2;</strong></li>
-                  <li class="fragment">3;</strong></li>
-                  <li class="fragment">4.</strong></li>
-               </ul>
+            </section>
+            <section data-background="#0562dc">
+               <h2 class="lighter">Como fazer <strong>Code Review</strong></h2>
             </section>
             <section data-background="#0562dc">
                <h2 class="lighter">E na <strong>prática ?</strong></strong></h2>
