--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                <h3 class="text-center">Vantagens</h3>
                <ul class="list-left">
                   <li class="fragment">Compartilhamento de conhecimento;</li>
-                  <li class="fragment">Desenvolvimento de espirito de Time;</strong></li>
-                  <li class="fragment">Aumento de qualidade código;</strong></li>
-                  <li class="fragment">Aumento de qualidade de produto.</strong></li>
-                  <li class="fragment">Possibilita prevenção de problemas em Produção.</strong></li>
+                  <li class="fragment">Desenvolvimento de espírito de time;</li>
+                  <li class="fragment">Aumento de qualidade código;</li>
+                  <li class="fragment">Aumento de qualidade de produto.</li>
+                  <li class="fragment">Possibilita prevenção de problemas em <strong>produção.</strong></li>
                </ul>
             </section>
             <section class="sec-slide top text-left">
@@ -83,10 +83,10 @@
                <h2 class="lighter">Como fazer <strong>Code Review</strong></h2>
             </section>
             <section data-background="#0562dc">
-               <h2 class="lighter">E na <strong>prática ?</strong></strong></h2>
+               <h2 class="lighter">E na <strong>prática ?</strong></h2>
             </section>
             <section class="top sec-slide">
-              <h2 class="text-center">Code review no nddCargo</strong></h2>
+              <h2 class="text-center">Code review no nddCargo</h2>
                <p>Artigo:</p>
                <a href="#">https://bit.ly/2GYGenR</a>
             </section>
