--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <section class="top sec-slide">
               <h2 class="text-center">Code review no nddCargo</h2>
                <p>Artigo:</p>
-               <a href="#">https://bit.ly/2GYGenR</a>
+               <a href="https://faqhouseofcargo.helpsite.com/categories/11580-code-review">https://bit.ly/2GYGenR</a>
             </section>
             <section data-background="#0562dc">
                <h2 class="lighter"><strong>Conclusão</strong></h2>
