--- a/index.html
+++ b/index.html
@@ -69,29 +69,27 @@
             <section class="sec-slide top text-left">
                <h3 class="text-center">Vantagens</h3>
                <ul class="list-left">
-                  <li class="fragment">Compartilhamento de conhecimento;</li>
-                  <li class="fragment">Desenvolvimento de espírito de time;</li>
-                  <li class="fragment">Aumento de qualidade código;</li>
-                  <li class="fragment">Aumento de qualidade de produto.</li>
+                  <li class="fragment">Compartilhamento de <strong>conhecimento</strong>;</li>
+                  <li class="fragment">Desenvolvimento do time;</li>
+                  <li class="fragment">Aumento da qualidade do <strong>código</strong> e consequentemente do <strong>produto;</strong></li>
                   <li class="fragment">Possibilita prevenção de problemas em <strong>produção.</strong></li>
                </ul>
             </section>
-            <section class="sec-slide top text-left">
+            <section class="top sec-slide">
                <h3 class="text-center">Desvantagens</h3>
+               <img style="width:300px; margin-top: 100px" src="img/desvantagens.gif" alt="Thanks">
             </section>
             <section data-background="#0562dc">
                <h2 class="lighter">Como fazer <strong>Code Review</strong></h2>
+            </section>           
+            <section class="top sec-slide">
+              <h2 class="text-center">Code review no nddCargo</h2>
+              <img style="width:300px; margin-top: 10px" src="img/code-review-nddcargo.gif" alt="code-review-nddcargo">
+			  <p>Artigo:</p>
+              <a href="https://faqhouseofcargo.helpsite.com/categories/11580-code-review">https://bit.ly/2GYGenR</a>
             </section>
             <section data-background="#0562dc">
                <h2 class="lighter">E na <strong>prática ?</strong></h2>
-            </section>
-            <section class="top sec-slide">
-              <h2 class="text-center">Code review no nddCargo</h2>
-               <p>Artigo:</p>
-               <a href="https://faqhouseofcargo.helpsite.com/categories/11580-code-review">https://bit.ly/2GYGenR</a>
-            </section>
-            <section data-background="#0562dc">
-               <h2 class="lighter"><strong>Conclusão</strong></h2>
             </section>
             <section class="top sec-slide">
                <h1>Obrigado!</h1>
